# MiniNumPy

./: Doxyfile  LICENSE.txt  README.md  main_test.py  pyproject.toml
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
src/MiniNumPy/: Array.py  MiniNumPy.py  __init__.py  linalg.py
